fixed whitespace issue. Adding blog post for go server and ui

--- a/news/blog/.vuepress/styles/index.styl
+++ b/news/blog/.vuepress/styles/index.styl
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .vuepress-blog-theme-content {
   font-family: $fontFamilyDefault !important;
+
+  p {
+    white-space: pre-wrap;
+  }
 }
 
 #header-wrapper, #mobile-header, .footer {
